Restyle page and fix bugs
- added custom fonts
- changed color scheme
- fixed button pressed results when input boxes are empty

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <div id="header"> </div>
   <div id="container">
     <div id="img-container">
-      <img id="food" src="assets/food.jpg">
+      <img id="image" src="assets/">
       <div id="logo-container">
-        <img id="logo" src="assets/logo.png">
+        <img id="logo" src="assets/">
       </div>
     </div>
     <div id="right-container">
